# learning-cmake-and-cpp

./: CMakeLists.txt  README.md
app/: hello_world.cpp  say_hello.cpp
